temporary site commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        <link rel="stylesheet" href="styles.css">
+</head>
+<body class="bg-darker">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-0 text-big">
+        <a class="navbar-brand" href="#">Michael Withers</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">              
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span>My Projects</span>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Under Construction</a>
+                        <!--
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                        -->
+                    </div>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">     
+                <li class="nav-item">
+                    <h3 class="m-0">
+                        <a class="nav-link" target="_blank" href="https://github.com/mglennwithers">
+                            <i title="Github" class="fab fa-github-square"></i>
+                        </a>
+                    </h3>
+                </li>
+                <li class="nav-item">
+                    <h3 class="m-0">
+                        <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/michael-withers-03545644/">
+                            <i title="LinkedIn" class="fab fa-linkedin"></i>
+                        </a>
+                    </h3>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container-fluid my-5">
+        <div class="row">
+            <div class="col-6 mx-auto">
+                <div class="card">
+                    <div class="card-header"><h1>Under Construction</h1></div>
+                    <div class="card-body"><h3>Future Projects will be shown here</h3></div>
+                    <div class="card-footer"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="fixed-bottom">
+        <nav class="navbar navbar-expand navbar-dark bg-dark py-0">
+            <ul class="navbar-nav ml-auto">     
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" href="https://github.com/mglennwithers">
+                        <i title="Github" class="fab fa-github-square"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/michael-withers-03545644/">
+                        <i title="LinkedIn" class="fab fa-linkedin"></i>
+                    </a>
+                </li>
+                <li class="nav-item"><span class="navbar-text">© Michael Withers 2019</span></li>
+            </ul>
+        </nav>
+    </div>
+
+    <scripts>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </scripts>
+</body>
